--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -15,9 +15,10 @@ on:
 jobs:
   build:
     runs-on: ubuntu-24.04
+    env:
+      VERSION_NAME: ${{ github.event_name == 'workflow_dispatch' && inputs.version || github.ref_name }}
     steps:
       - uses: actions/checkout@v4
-      - uses: actions/setup-go@v5
       - uses: docker/setup-qemu-action@v3
       - uses: docker/setup-buildx-action@v3
 
@@ -28,28 +29,29 @@ jobs:
           username: ${{ github.repository_owner }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Prepare
-        run: |
-          go generate ./...
-          cat ./cmd/version.g.go
-        env:
-          BRING_VERSION: ${{ github.event_name != 'workflow_dispatch' && github.ref_name || inputs.version }}
-
       - name: Image meta
         id: meta
         uses: docker/metadata-action@v5
         with:
-          images: ghcr.io/lesomnus/bring:edge
+          images: ghcr.io/lesomnus/bring
           tags: |
             type=semver,pattern={{version}}
             type=semver,pattern={{major}}.{{minor}}
+
+      - name: Prepare
+        run: ./scripts/gen-version-file.sh
+        env:
+          BRING_VERSION: ${{ env.VERSION_NAME }}
 
       - name: Build and push
         uses: docker/build-push-action@v4
         with:
           context: .
+          tags: ${{ steps.meta.outputs.tags }}
+          labels: ${{ steps.meta.outputs.labels }}
           platforms: linux/amd64,linux/arm64
-          tags: ghcr.io/lesomnus/bring:edge
           push: true
+          build-args: |
+            VERSION_NAME=${{ env.VERSION_NAME }}
           secrets: |
-            "github_token=${{ secrets.GITHUB_TOKEN }}"
+            github_token=${{ secrets.GITHUB_TOKEN }}
