--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -9,6 +9,14 @@ on:
       - "!**/*_test.go"
       - ".dockerignore"
       - "Dockerfile"
+  pull_request:
+    branches:
+      - main
+    paths:
+      - "**/*.go"
+      - "!**/*_test.go"
+      - ".dockerignore"
+      - "Dockerfile"
   workflow_dispatch: {}
 
 jobs:
@@ -16,6 +24,16 @@ jobs:
     runs-on: ubuntu-24.04
     steps:
       - uses: actions/checkout@v4
+      - uses: actions/setup-go@v5
+        with:
+          go-version: "1.23.3"
+
+      - name: Test
+        run: |
+          go test ./...
+          go build -o bring
+          bring version
+
       - uses: docker/setup-qemu-action@v3
       - uses: docker/setup-buildx-action@v3
 
@@ -31,7 +49,7 @@ jobs:
         run: |
           BRING_VERSION="$(gh release list --exclude-drafts --json tagName --jq '.[0].tagName')"
           BRING_VERSION+="+{{ github.run_id }}"
-          echo "version=$BRING_VERSION" | tee >> $GITHUB_OUTPUT
+          echo "version=$BRING_VERSION" | tee -a $GITHUB_OUTPUT
           ./scripts/gen-version-file.sh
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
@@ -52,4 +70,4 @@ jobs:
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
           platforms: linux/amd64,linux/arm64
-          push: true
+          push: ${{ github.event_name == "push" }}
