--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -31,8 +31,8 @@ jobs:
       - name: Test
         run: |
           go test ./...
-          go build -o bring
-          bring version
+          go build -o ./bring
+          ./bring version
 
       - uses: docker/setup-qemu-action@v3
       - uses: docker/setup-buildx-action@v3
