--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -4,19 +4,13 @@ on:
   release:
     types:
       - published
-  workflow_dispatch:
-    inputs:
-      version:
-        description: Name of the version to release
-        required: false
-        default: "v0.0.0-test"
-        type: string
+  workflow_dispatch: {}
 
 jobs:
   build:
     runs-on: ubuntu-24.04
     env:
-      VERSION_NAME: ${{ github.event_name == 'workflow_dispatch' && inputs.version || github.ref_name }}
+      VERSION_NAME: ${{ github.event_name == 'workflow_dispatch' && 'v0.0.0-test' || github.ref_name }}
     steps:
       - uses: actions/checkout@v4
       - uses: docker/setup-qemu-action@v3
@@ -42,6 +36,7 @@ jobs:
           tags: |
             type=semver,pattern={{version}}
             type=semver,pattern={{major}}.{{minor}}
+            type=raw,value=0.0.0-test,enable=${{ github.event_name == 'workflow_dispatch' }}
 
       - name: Build and push
         uses: docker/build-push-action@v4
@@ -52,6 +47,7 @@ jobs:
           platforms: linux/amd64,linux/arm64
           push: true
           build-args: |
+            REPO_NAME=${{ github.repository }}
             VERSION_NAME=${{ env.VERSION_NAME }}
           secrets: |
             github_token=${{ secrets.GITHUB_TOKEN }}
